<resources>
    <string name="app_name">Asignaturas</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="nuevaAsig">Añadir Asignatura</string>
    <string name="nomAsig">Asignatura:</string>
    <string name="nomProf">Profesor:</string>
    <string name="hintAsig">Asignatura</string>
    <string name="hintProf">Profesor</string>
    <string name="txtHorario">Horario</string>
    <string name="strLun">Lunes</string>
    <string name="strMar">Martes</string>
    <string name="strMier">Miercoles</string>
    <string name="strJue">Jueves</string>
    <string name="strVie">Viernes</string>
    <string name="strSab">Sabado</string>
    <string name="strLimpiar">Limpiar</string>
    <string name="strAñadir">Añadir</string>
    <string name="strDias">Small Text</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_menu">Menu</string>

    <string name="crear_materias">Crear Materias</string>
    <string name="ver_materias">Ver Materias</string>
    <string name="salir">Salir</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_nav__menu__main">Nav_Menu_Main</string>

    <string name="title_section1">Crear Materias</string>
    <string name="title_section2">Ver Materias</string>
    <string name="title_section3">Salir</string>
</resources>
